fix: 1. ui issue in the select role dropdown of users table. 2. user name should be visible for smaller screens as well in the user profile button. 3. used alembic for data migration.

--- a/apps/frontend/src/app/globals.css
+++ b/apps/frontend/src/app/globals.css
@@ -25,6 +25,6 @@
 
 @layer utilities {
   .h-screen-minus-header {
-    height: calc(100vh - 72px);
+    height: calc(100vh - 66px);
   }
 }
